# ansiconst-rs

./: Cargo.toml  LICENSE  README.md  README.tpl
generate_readme/: Cargo.toml  README.md
generate_readme/src/: main.rs
src/: ansi.rs  color.rs  effect.rs  fmt.rs  introspect.rs  io.rs  lib.rs  str.rs  write.rs
src/ansi/: attr.rs  color.rs  colour.rs  effect.rs
src/fmt/: display.rs  string.rs
src/fmt/string/: build.rs  common.rs  display.rs
src/introspect/: color.rs  effect.rs
src/io/: stream.rs  writer.rs
src/write/: compile_time.rs  run_time.rs
tests/: ansi.rs  color.rs  display.rs  important.rs  io.rs  macros.rs  noansi.rs  performance.rs  protection.rs  sizes.rs  str.rs
tests/common/: case.rs  expect.rs  mod.rs
