[package]
name = "ansiconst"
version = "0.2.1"
edition = "2021"
rust-version = "1.83"
authors = ["Macca Tech Ltd <info@macca.tech>", "Francis McKenzie <francis@macca.tech>"]
description = "Library for declaring nestable ANSI styles in const context"
license = "MIT"
repository = "https://github.com/maccatech/ansiconst-rs"
keywords = ["ansi", "term", "colour", "color", "style"]
categories = ["command-line-interface"]
exclude = [
    "generate_readme/*",
]

[features]
color256 = []
rgb = ["color256"]

[dependencies]
bitflags = "2.5.0"
